--- a/app/src/main/res/layout/tview.xml
+++ b/app/src/main/res/layout/tview.xml
@@ -2,9 +2,10 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:design="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="id.web.devnull.ostdroid.MainActivity">
+    tools:context="id.web.devnull.ostdroid.TView">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,8 +31,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="User name"
         android:textSize="24sp"
         />
+        
     </LinearLayout>
+        <android.support.design.widget.BottomNavigationView
+                android:id="@+id/bnav"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                design:menu="@menu/nav_menu" />
+
 </android.support.design.widget.CoordinatorLayout>
