--- a/app/src/main/res/layout/frlist.xml
+++ b/app/src/main/res/layout/frlist.xml
@@ -11,6 +11,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="10dp"
                 android:paddingBottom="20dp"
+                android:layout_marginBottom="100dp"
                 android:clipToPadding="false"
                 android:scrollbars="vertical" />
 </LinearLayout>
