fix image issue

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="gray">#dedfe0</color>
     <color name="dark_gray">#6c6c6d</color>
     <color name="light_gray">#f7f7f7</color>
+    <color name="light_yellow">#fcfab5</color>
 </resources>
