--- a/app/src/main/res/drawable/img.xml
+++ b/app/src/main/res/drawable/img.xml
@@ -8,7 +8,7 @@
         </item>
         <item android:right="1dp" android:left="1dp" android:bottom="1dp" android:top="1dp">
                 <shape android:shape="rectangle">
-                        <solid android:color="@color/light_yellow"/>
+                        <solid android:color="@color/light_gray"/>
                         <corners android:radius="2dp"/>
                 </shape>
         </item>
