--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/pink"
     android:fitsSystemWindows="true">
 
     <LinearLayout
@@ -51,7 +51,7 @@
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/login_btn"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimary"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
