--- a/app/src/main/res/layout/tview.xml
+++ b/app/src/main/res/layout/tview.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#f9ebe0"
+        android:background="@color/pink"
         android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
