--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="light_gray">#f7f7f7</color>
     <color name="light_yellow">#fffde5</color>
     <color name="abu">#f7f7f7</color>
+    <color name="pink">#f9ebe0</color>
 </resources>
